--- a/Yunt/MotorInfo/App.config
+++ b/Yunt/MotorInfo/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="yunt_xml" connectionString="server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;" providerName="MySql.Data.MySqlClient" />
-    <add name="yunt_device" connectionString="server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="yunt_xml" connectionString="server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_xml;uid=wdd;pwd=Unitoon2018;" providerName="MySql.Data.MySqlClient" />
+    <add name="yunt_device" connectionString="server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;" providerName="MySql.Data.MySqlClient" />-->
   </connectionStrings>
 </configuration>
