--- a/Yunt/Yunt.IDC/appsettings.json
+++ b/Yunt/Yunt.IDC/appsettings.json
@@ -22,7 +22,7 @@
     },
     "Device": {
       "RedisConn": "119.23.243.83:26125",
-      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;pooling=true;",
+      "MySqlConn": "server=rm-wz9mrn9kj0lt0r0i18o.mysql.rds.aliyuncs.com;port=3306;database=yunt_device;uid=wdd;pwd=Unitoon2018;",
       "RedisPwd": "Unitoon2018"
     },
     "Inventory": {
