--- a/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
+++ b/Yunt/Yunt.WebApi/Yunt.WebApi.csproj
@@ -85,4 +85,6 @@
     </Content>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
