--- a/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
+++ b/Yunt/Yunt.Demo.ConsoleApp1/Yunt.Demo.ConsoleApp1.csproj
@@ -18,7 +18,6 @@
     <Compile Remove="doubletoothrollcrusher\**" />
     <Compile Remove="impactcrusher2\**" />
     <Compile Remove="impactcrusher\**" />
-    <Compile Remove="Inventory-Migrations\**" />
     <Compile Remove="jawcrusher2\**" />
     <Compile Remove="jawcrusher\**" />
     <Compile Remove="materialfeeder2\**" />
@@ -34,6 +33,7 @@
     <Compile Remove="verticalcrusher\**" />
     <Compile Remove="vibrosieve2\**" />
     <Compile Remove="vibrosieve\**" />
+    <Compile Remove="Xml-migrations\**" />
     <EmbeddedResource Remove="Analysis-Migrations\**" />
     <EmbeddedResource Remove="Auth-Migrations\**" />
     <EmbeddedResource Remove="conecrusher2\**" />
@@ -46,7 +46,6 @@
     <EmbeddedResource Remove="doubletoothrollcrusher\**" />
     <EmbeddedResource Remove="impactcrusher2\**" />
     <EmbeddedResource Remove="impactcrusher\**" />
-    <EmbeddedResource Remove="Inventory-Migrations\**" />
     <EmbeddedResource Remove="jawcrusher2\**" />
     <EmbeddedResource Remove="jawcrusher\**" />
     <EmbeddedResource Remove="materialfeeder2\**" />
@@ -62,6 +61,7 @@
     <EmbeddedResource Remove="verticalcrusher\**" />
     <EmbeddedResource Remove="vibrosieve2\**" />
     <EmbeddedResource Remove="vibrosieve\**" />
+    <EmbeddedResource Remove="Xml-migrations\**" />
     <None Remove="Analysis-Migrations\**" />
     <None Remove="Auth-Migrations\**" />
     <None Remove="conecrusher2\**" />
@@ -74,7 +74,6 @@
     <None Remove="doubletoothrollcrusher\**" />
     <None Remove="impactcrusher2\**" />
     <None Remove="impactcrusher\**" />
-    <None Remove="Inventory-Migrations\**" />
     <None Remove="jawcrusher2\**" />
     <None Remove="jawcrusher\**" />
     <None Remove="materialfeeder2\**" />
@@ -90,6 +89,7 @@
     <None Remove="verticalcrusher\**" />
     <None Remove="vibrosieve2\**" />
     <None Remove="vibrosieve\**" />
+    <None Remove="Xml-migrations\**" />
   </ItemGroup>
 
   <ItemGroup>
